--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <div class="btn">
         <button class="btn-primary">Contact</button>
     </div>
+    <div class="menu-icon">
+        <i class="fa-solid fa-bars"></i>
+    </div>
     
 </nav>
+<script src="https://kit.fontawesome.com/4af9dcb55e.js" crossorigin="anonymous"></script>
     </header>
 
     <main>
